--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "liveServer.settings.port": 5502,
     "python.defaultInterpreterPath": ".venv\\Scripts\\python.exe",
-    "python.terminal.activateEnvironment": true
+    "python.terminal.activateEnvironment": true,
+    "python.analysis.extraPaths": [
+        "${workspaceFolder}/tools",
+        "${workspaceFolder}/backend"
+    ]
 }
